--- a/bakery.html
+++ b/bakery.html
@@ -15,10 +15,10 @@
 <header>
 <nav>
   <ul>
-    <li><a href="">Etusivu</a></li>
-    <li><a href="">Tuotteet</a></li>
-    <li><a href="">Ajankohtaista</a></li>
-    <li><a href="">Meistä</a></li>
+    <li><a href="">Frontpage</a></li>
+    <li><a href="">Products</a></li>
+    <li><a href="">News</a></li>
+    <li><a href="">About us</a></li>
   </ul>
 </nav>  
 <h1><img src="images/bgb_logo.png" alt="Black Goose Bakery"></h1>
