--- a/bakery.html
+++ b/bakery.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>BURST! burst is a </title>
+<title>BURST!</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Discover the health benefits of Burst, a drink made with the powerful ingredient Shilajit and available in a variety of delicious flavors. Enjoy the best of both worlds with Burst's unique combination of taste and wellness.">
 <link href="https://fonts.googleapis.com/css?family=Stint+Ultra+Expanded" rel="stylesheet">
 <style>
 @import url(bakery-rwd-finished.css);
