--- a/bakery.html
+++ b/bakery.html
@@ -23,33 +23,33 @@
   </ul>
 </nav>  
 <h1><img src="images/bgb_logo.png" alt="Black Goose Bakery"></h1>
-<p>The delicious baked goods you love at Black Goose Bistro...now available to go!</p>
+<p>Placeholder1/Ph1</p>
 </header>
 
 <main>
-<h2>Fresh from the Oven</h2>
-<h3>Breads</h3>
-<p><img src="images/bread.png" alt="round loaf of bread on cutting board"> Our breads are made daily from highest-quality<span class="linelength"> whole grain flour, water, </span>salt, and yeast or sourdough starter. Simply and naturally, and never any preservatives. Patience is key to achieving the proper level of fermentation and baking each loaf to perfection. Available in whole grain, sourdough, olive loaf, classic rye, and potato-onion.</p>
-<p class="more"><a href="">Learn more about our baking process...</a></p>
+<h2>Ph2</h2>
+<h3>Ph3</h3>
+<p><img src="images/bread.png" alt="round loaf of bread on cutting board"> Ph4<span class="linelength"> Ph5 </span>Ph6</p>
+<p class="more"><a href="">Ph.Bababooey</a></p>
 
-<h3>Muffins</h3>
-<p><img src="images/muffin.png" alt="one chocolate chip muffin"> Every day, we have offer a large selection of muffins, including blueberry, multi-berry, bran, corn, lemon-poppyseed, and chocolate. Our muffins are made from scratch each day. Stop by to see our seasonal muffin flavors!</p>
-<p class="more"><a href="">Learn more about how we make our muffins...</a></p>
+<h3>Ph7</h3>
+<p><img src="images/muffin.png" alt="one chocolate chip muffin"> Ph8</p>
+<p class="more"><a href="">Ph9</a></p>
 </main>
 
 <aside>
-<h2>Hours</h2>
-<p><span class="day">Monday:</span> 5am to 3pm</p>
-<p><span class="day">Tuesday:</span> 5am to 3pm</p>
-<p><span class="day">Wednesday:</span> 5am to 3pm</p>
-<p><span class="day">Thursday:</span> 5am to 3pm</p>
-<p><span class="day">Friday:</span> 5am to 3pm</p>
-<p><span class="day">Saturday:</span> 6am to 4pm</p>
-<p><span class="day">Sunday:</span> 6am to 4pm</p>
+<h2>Ph10</h2>
+<p><span class="day">Ph10.1</span> Ph10.2</p>
+<p><span class="day">Ph10.3</span> Ph10.4</p>
+<p><span class="day">Ph10.5</span> Ph10.6</p>
+<p><span class="day">Ph10.7</span> Ph10.8</p>
+<p><span class="day">Ph10.9</span> Ph10.10</p>
+<p><span class="day">Ph10.11</span> Ph10.12</p>
+<p><span class="day">Ph10.13</span> Ph10.14</p>
 </aside>
 
 <footer>
-<p>All content copyright &copy; 2017, Black Goose Bistro.</p>
+<p>Ph11 &copy; Ph12, Ph13</p>
   <div id="award"> 
     <img src="images/award.png" alt="Farmers' Market Award"> 
   </div> 
