--- a/bakery.html
+++ b/bakery.html
@@ -22,18 +22,18 @@
     <li><a href="">About us</a></li>
   </ul>
 </nav>  
-<h1><img src="images/bgb_logo.png" alt="Black Goose Bakery"></h1>
+<h1><img src="" alt=""></h1>
 <p>Placeholder1/Ph1</p>
 </header>
 
 <main>
 <h2>Ph2</h2>
 <h3>Ph3</h3>
-<p><img src="images/bread.png" alt="round loaf of bread on cutting board"> Ph4<span class="linelength"> Ph5 </span>Ph6</p>
+<p><img src="" alt=""> Ph4<span class="linelength"> Ph5 </span>Ph6</p>
 <p class="more"><a href="">Ph.Bababooey</a></p>
 
 <h3>Ph7</h3>
-<p><img src="images/muffin.png" alt="one chocolate chip muffin"> Ph8</p>
+<p><img src="" alt=""> Ph8</p>
 <p class="more"><a href="">Ph9</a></p>
 </main>
 
@@ -50,8 +50,8 @@
 
 <footer>
 <p>Ph11 &copy; Ph12, Ph13</p>
-  <div id="award"> 
-    <img src="images/award.png" alt="Farmers' Market Award"> 
+  <div id=""> 
+    <img src="" alt=""> 
   </div> 
 </footer>
 </div>
