Menulinkit ja tyylimuutos
Antakaa palautetta jos ei toimi linkit teillä tai tyyli roskiin. Lisäsin kans css filun kommenttiin todo listin sielt voi nappailla jos osaa korjata mut jos ei nii jatkan ite siit jossain kohtaa.
:100:

--- a/bakery.html
+++ b/bakery.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>BURST!</title>
@@ -7,23 +7,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Discover the health benefits of Burst, a drink made with the powerful ingredient Shilajit and available in a variety of delicious flavors. Enjoy the best of both worlds with Burst's unique combination of taste and wellness.">
 <link href="https://fonts.googleapis.com/css?family=Stint+Ultra+Expanded" rel="stylesheet">
-<style>
-@import url(bakery-rwd-finished.css);
-</style>
+  <style>
+    @import url(bakery-rwd-finished.css);
+  </style>
 </head>
 <body> 
 <div id="container">
+
+
 <header>
 <nav>
   <ul>
-    <li><a href="">Frontpage</a></li>
-    <li><a href="">Products</a></li>
-    <li><a href="">News</a></li>
-    <li><a href="">About us</a></li>
+    <li><a href="bakery.html">Frontpage</a></li>
+    <li><a href="Products.html">Products</a></li>
+    <li><a href="News.html">News</a></li>
+    <li><a href="AboutUs.html">About us</a></li>
   </ul>
 </nav>  
-<h1><img src="" alt=""></h1>
-<p>Placeholder1/Ph1</p>
+  <h1><img src="" alt=""></h1>
+  <p>Placeholder1/Ph1</p>
 </header>
 
 <main>
