Added title punchline
Addad title lenght to meet the requirements of the customer.

--- a/bakery.html
+++ b/bakery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>BURST!</title>
+<title>BURST! | GOT A THIRST? GET READY TO BURST!</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Discover the health benefits of Burst, a drink made with the powerful ingredient Shilajit and available in a variety of delicious flavors. Enjoy the best of both worlds with Burst's unique combination of taste and wellness.">
