Products-section updated
Added text to the Products-section and changed the language setting
 (html lang ="fi")

--- a/Products.html
+++ b/Products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,9 +22,24 @@
         </nav>  
     </header>
 
-    <p>Tuotteeme kehittyi </p>
+<h1>Tuotteestamme</h1>
+
+    <p>Tuotteeme kehittyi ideasta tarjota terveellisempi vaihtoehto urheilujuomille.<br>
+    Shilajit on ollu tunnettu jo vuosisatojen ajan muun muuassa Pohjois-Intiassa ja Nepalissa,
+    ja esimerkiksi Himalayan vuoristossa asuva Sherpat-heimo käyttää sitä säännöllisesti.<br>
+    Sherpat ovat tunnettuja voimakkaina ja pitkän iän saavuttavina vuorikiipeilijöinä.
+  <strong>BURST</strong> on yhdistelmä tästä luonnonaarteesta sekä puhtaasta suomalaisesta lähdevedestä.
+    Sen lisäksi juomassa on lunnonmukaista aromia ja makeutusainetta.</p>
 
 
-    
+
+    <p><em>Lisätietoa Shilajitista</em></p>
+    <ul>
+        <li>Sisältää yli 84 mineraalia ja foolihappoa</li>
+        <li>Toimii antioksidanttina kehossa ja parantaa vastustuskykyä</li>
+        <li>Luonollinen energiatason ja kestävyyden nostaja</li>
+    </ul>
+
+
 </body>
 </html>
