Minor changes to the text
Added a few line breaks to the Products-section

--- a/Products.html
+++ b/Products.html
@@ -26,10 +26,10 @@
 
     <p>Tuotteeme kehittyi ideasta tarjota terveellisempi vaihtoehto urheilujuomille.<br>
     Shilajit on ollu tunnettu jo vuosisatojen ajan muun muuassa Pohjois-Intiassa ja Nepalissa,
-    ja esimerkiksi Himalayan vuoristossa asuva Sherpat-heimo käyttää sitä säännöllisesti.<br>
+    ja esimerkiksi Himalayan vuoristossa asuva<br> Sherpat-heimo käyttää sitä säännöllisesti.<br>
     Sherpat ovat tunnettuja voimakkaina ja pitkän iän saavuttavina vuorikiipeilijöinä.
-  <strong>BURST</strong> on yhdistelmä tästä luonnonaarteesta sekä puhtaasta suomalaisesta lähdevedestä.
-    Sen lisäksi juomassa on lunnonmukaista aromia ja makeutusainetta.</p>
+    <br><strong>BURST</strong> on yhdistelmä tästä luonnonaarteesta sekä puhtaasta suomalaisesta lähdevedestä.
+    Sen lisäksi juomassa on lunnonmukaista<br> aromia ja makeutusainetta.</p>
 
 
 
