Updated the AboutUs-section
Added text to the AboutUs-section

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -22,7 +22,15 @@
         </nav>  
     </header>
 
-    <div>lorem ipsum ullam</div>
+    <h1>Tietoa meistä</h1>
+
+
+    <p>Olemme joukko nuoria ja innokkaita tuotteiden kehittäjiä, jotka uskovat <br>innovatiivisiin
+    aktiivista elämäntapaa noudattaville ihmisille suunnattuihin tuotteisiin.<br></p>
+
+
+    
+    <p>Seuraa meitä somessa!</p>
     
 </body>
 </html>
