--- a/bakery.html
+++ b/bakery.html
@@ -40,8 +40,9 @@
 </main>
 
 <aside>
-<h2>Ph10</h2>
-<p><span class="day">Ph10.1</span> Ph10.2</p>
+<h2>Shilajit</h2>
+<p><span class="day">Laadukkaat ja luontaiset raaka-aineet</span><br>
+<h4>Ei ylimääräisiä ainesosia - meidän burst juomaamme käytämme puhtaita raaka-aineita kuten stevia makeutusaine</p></h4>
 <p><span class="day">Ph10.3</span> Ph10.4</p>
 <p><span class="day">Ph10.5</span> Ph10.6</p>
 <p><span class="day">Ph10.7</span> Ph10.8</p>
