--- a/bakery.html
+++ b/bakery.html
@@ -43,12 +43,10 @@
 <h2>Shilajit</h2>
 <p><span class="day">Laadukkaat ja luontaiset raaka-aineet</span><br>
 <h4>Ei ylimääräisiä ainesosia - meidän burst juomaamme käytämme puhtaita raaka-aineita kuten stevia makeutusaine</p></h4>
-<p><span class="day">Ph10.3</span> Ph10.4</p>
-<p><span class="day">Ph10.5</span> Ph10.6</p>
-<p><span class="day">Ph10.7</span> Ph10.8</p>
-<p><span class="day">Ph10.9</span> Ph10.10</p>
-<p><span class="day">Ph10.11</span> Ph10.12</p>
-<p><span class="day">Ph10.13</span> Ph10.14</p>
+<p><span class="day">Ei turhia lisäaineita</span><br><h4>Käytämme vain oikeita aineisosia ja tuotteessamme ei sisällä keinotekoisia aineesosia kuten väriaineita</h4></p>
+<p><span class="day">Luontainen makeutus</span><br><h4>Käytämme stevia ja muita luonnon makeutus ainesosia. Tuotteessamme ei sisälly asesulfaami K:ta eikä aspartaamia tai sukraloosia.</h4></p>
+<p><span class="day">Herkullinen maku</span><br><h4>Panostamme Burst juomaamme lähellä luonnon rakkaisiin ja aitoihin makuelämyksiin, jotta voit nauttia meidän shilajit juomista vapaasti ilman ylimääräisiä jälkimakuja.</h4></p>
+<p><span class="day">Shilajit vaikutukset & Käytettävyys</span><br><h4>Oletko väsynyt? Onko pitkiä päiviä? Oli päiväsi tai olosi miten tahansa, Burst tuotteemme tuo joka päiväiseen arkeen teho boostia ja vahvistaa sinua entistä enemmän. LETS FUCKING GO!</h4></p>
 </aside>
 
 <footer>
