--- a/bakery.html
+++ b/bakery.html
@@ -46,7 +46,7 @@
 <p><span class="day">Ei turhia lisäaineita</span><br><h4>Käytämme vain oikeita aineisosia ja tuotteessamme ei sisällä keinotekoisia aineesosia kuten väriaineita</h4></p>
 <p><span class="day">Luontainen makeutus</span><br><h4>Käytämme stevia ja muita luonnon makeutus ainesosia. Tuotteessamme ei sisälly asesulfaami K:ta eikä aspartaamia tai sukraloosia.</h4></p>
 <p><span class="day">Herkullinen maku</span><br><h4>Panostamme Burst juomaamme lähellä luonnon rakkaisiin ja aitoihin makuelämyksiin, jotta voit nauttia meidän shilajit juomista vapaasti ilman ylimääräisiä jälkimakuja.</h4></p>
-<p><span class="day">Shilajit vaikutukset & Käytettävyys</span><br><h4>Oletko väsynyt? Onko pitkiä päiviä? Oli päiväsi tai olosi miten tahansa, Burst tuotteemme tuo joka päiväiseen arkeen teho boostia ja vahvistaa sinua entistä enemmän. LETS FUCKING GO!</h4></p>
+<p><span class="day">Shilajit vaikutukset & Käytettävyys</span><br><h4>Oletko väsynyt? Onko pitkiä päiviä? Oli päiväsi tai olosi miten tahansa, Burst tuotteemme tuo joka päiväiseen arkeen teho boostia ja vahvistaa sinua entistä enemmän. LETS GO!</h4></p>
 </aside>
 
 <footer>
