--- a/bakery.html
+++ b/bakery.html
@@ -22,6 +22,8 @@
     <li><a href="Products.html">Products</a></li>
     <li><a href="News.html">News</a></li>
     <li><a href="AboutUs.html">About us</a></li>
+    <li><a class="kielinappi" onclick="kieliVaihto()">In English</a></li>
+    <script src="logiikka.js"></script>
   </ul>
 </nav>  
   <h1><img src="" alt=""></h1>
