--- a/News-en.html
+++ b/News-en.html
@@ -14,15 +14,15 @@
     <header>
         <nav>
           <ul>
-            <li><a href="bakery.html">Frontpage</a></li>
-            <li><a href="Products.html">Products</a></li>
-            <li><a href="News.html">News</a></li>
-            <li><a href="AboutUs.html">About us</a></li>
+            <li><a href="index-en.html">Frontpage</a></li>
+            <li><a href="Products-en.html">Products</a></li>
+            <li><a href="News-en.html">News</a></li>
+            <li><a href="AboutUs-en.html">About us</a></li>
           </ul>
         </nav>  
     </header>
 
-    <div>parit somelinkit?</div>
+    <div>more to come</div>
     
 </body>
 </html>
