--- a/Products-fi.html
+++ b/Products-fi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Catalog</title>
+    <title>Tuote Katalogi</title>
     <style>
       @import url(bakery-rwd-finished.css);
     </style>
@@ -14,10 +14,10 @@
     <header>
         <nav>
           <ul>
-            <li><a href="bakery.html">Frontpage</a></li>
-            <li><a href="Products.html">Products</a></li>
-            <li><a href="News.html">News</a></li>
-            <li><a href="AboutUs.html">About us</a></li>
+            <li><a href="index-fi.html">Etusivu</a></li>
+            <li><a href="Products-fi.html">Tuotteet</a></li>
+            <li><a href="News-fi.html">Uutiset</a></li>
+            <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
           </ul>
         </nav>  
     </header>
