--- a/index-fi.html
+++ b/index-fi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>BURST | GOT A THIRST? GET READY TO BURST!</title>
+<title>BURST | ONKO JANO? OTA BURST!</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Discover the health benefits of Burst, a drink made with the powerful ingredient Shilajit and available in a variety of delicious flavors. Enjoy the best of both worlds with Burst's unique combination of taste and wellness.">
@@ -18,11 +18,12 @@
 <header>
 <nav>
   <ul>
-    <li><a href="bakery.html">Frontpage</a></li>
-    <li><a href="Products.html">Products</a></li>
-    <li><a href="News.html">News</a></li>
-    <li><a href="AboutUs.html">About us</a></li>
-    <li><a class="kielinappi" onclick="kieliVaihto()">In English</a></li>
+    <li><a href="index-fi.html">Etusivu</a></li>
+    <li><a href="Products-fi.html">Tuotteet</a></li>
+    <li><a href="News-fi.html">Uutiset</a></li>
+    <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
+    <!-- <li><a class="kielinappi" onclick="kieliVaihto()">Sivu englanniksi</a></li> -->
+    <li><a href="index-en.html">Sivu englanniksi</a></li>
     <script src="logiikka.js"></script>
   </ul>
 </nav>  
