--- a/AboutUs-fi.html
+++ b/AboutUs-fi.html
@@ -18,6 +18,7 @@
             <li><a href="Products-fi.html">Tuotteet</a></li>
             <li><a href="News-fi.html">Uutiset</a></li>
             <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
+            <li><a href="AboutUs-en.html">Sivu englanniksi</a></li>
           </ul>
         </nav>  
     </header>
