--- a/AboutUs-en.html
+++ b/AboutUs-en.html
@@ -18,6 +18,7 @@
             <li><a href="Products-en.html">Products</a></li>
             <li><a href="News-en.html">News</a></li>
             <li><a href="AboutUs-en.html">About us</a></li>
+            <li><a href="AboutUs-fi.html">In Finnish</a></li>
           </ul>
         </nav>  
     </header>
