Made a phone version menu
Changed the old menu for a phone one. It still needs work so that it wont pop up while using it on a computer.

--- a/bakery.html
+++ b/bakery.html
@@ -15,18 +15,22 @@
 <div id="container">
 
 
-<header>
-<nav>
-  <ul>
-    <li><a href="bakery.html">Frontpage</a></li>
-    <li><a href="Products.html">Products</a></li>
-    <li><a href="News.html">News</a></li>
-    <li><a href="AboutUs.html">About us</a></li>
-  </ul>
-</nav>  
-  <h1><img src="" alt=""></h1>
-  <p>Placeholder1/Ph1</p>
-</header>
+  <header>
+    <nav>
+      <ul>
+      <li>
+        <a href="#">Menu</a>
+        <ul class="dropdown">
+          <li><a href="bakery.html">Frontpage</a></li>
+          <li><a href="Products.html">Products</a></li>
+          <li><a href="News.html">News</a></li>
+          <li><a href="AboutUs.html">About us</a></li>
+      </ul>
+      </li>
+    </nav>  
+      <h1><img src="" alt=""></h1>
+      <p>Placeholder1/Ph1</p>
+    </header>
 
 <main>
 <h2>Ph2</h2>
