--- a/News.html
+++ b/News.html
@@ -11,15 +11,21 @@
 </head>
 <body>
 
-    <header>
-        <nav>
-          <ul>
-            <li><a href="bakery.html">Frontpage</a></li>
-            <li><a href="Products.html">Products</a></li>
-            <li><a href="News.html">News</a></li>
-            <li><a href="AboutUs.html">About us</a></li>
-          </ul>
-        </nav>  
+  <header>
+    <nav>
+      <ul>
+      <li>
+        <a href="#">Menu</a>
+        <ul class="dropdown">
+          <li><a href="bakery.html">Frontpage</a></li>
+          <li><a href="Products.html">Products</a></li>
+          <li><a href="News.html">News</a></li>
+          <li><a href="AboutUs.html">About us</a></li>
+      </ul>
+      </li>
+    </nav>  
+      <h1><img src="" alt=""></h1>
+      <p>Placeholder1/Ph1</p>
     </header>
 
     <div>parit somelinkit?</div>
