About us fi edited
Added text to the News section and fixed a small grammar mistake in the About Us header

--- a/News-fi.html
+++ b/News-fi.html
@@ -23,7 +23,11 @@
         </nav>  
     </header>
 
-    <div>parit somelinkit?</div>
+    <h1>Artikkelit</h1>
+
+   <p id="darkblue"> Artikkelit shilajitin todennetuista terveysvaikutuksista löytyy:<br>  
+    <a href="https://www.sciencedirect.com/topics/pharmacology-toxicology-and-pharmaceutical-science/shilajeet">tästä</a><br>
+    <a href="https://pharmeasy.in/blog/health-benefits-of-shilajit/">ja tästä</a><br></p>
     
 </body>
 </html>
