--- a/AboutUs-en.html
+++ b/AboutUs-en.html
@@ -23,7 +23,7 @@
         </nav>  
     </header>
 
-    <h1>Abous us</h1>
+    <h1>About us</h1>
 
 
     <p>We are a group of young and enthusiastic product developers who believe in <br>innovative
