News fi updated
Updated the News section

--- a/News-fi.html
+++ b/News-fi.html
@@ -25,9 +25,10 @@
 
     <h1>Artikkelit</h1>
 
-   <p id="darkblue"> Artikkelit shilajitin todennetuista terveysvaikutuksista löytyy:<br>  
-    <a href="https://www.sciencedirect.com/topics/pharmacology-toxicology-and-pharmaceutical-science/shilajeet">tästä</a><br>
-    <a href="https://pharmeasy.in/blog/health-benefits-of-shilajit/">ja tästä</a><br></p>
+   <p id="darkblue"> Artikkelit shilajitin todennetuista terveysvaikutuksista löytyy tästä:<br>
+    <a href="https://www.sciencedirect.com/topics/pharmacology-toxicology-and-pharmaceutical-science/shilajeet">Tieteteellinen tutkimus</a>
+    <br>
+    <a href="https://pharmeasy.in/blog/health-benefits-of-shilajit/">Terveysvaikutukset-blogi</a></p>
     
 </body>
 </html>
