--- a/News-en.html
+++ b/News-en.html
@@ -23,7 +23,13 @@
         </nav>  
     </header>
 
-    <div>more to come</div>
-    
+    <h1>Articles</h1>
+
+    <p id="darkblue"> You can find articles about the confirmed effects shilajit has on health here:<br></p>
+    <ul>
+      <li><a href="https://www.sciencedirect.com/topics/pharmacology-toxicology-and-pharmaceutical-science/shilajeet">Scientific study/report</a></li>
+      <br>
+      <li><a href="https://pharmeasy.in/blog/health-benefits-of-shilajit/">Health benefits-blog</a></li>
+    </ul>
 </body>
 </html>
