--- a/News-fi.html
+++ b/News-fi.html
@@ -25,10 +25,11 @@
 
     <h1>Artikkelit</h1>
 
-   <p id="darkblue"> Artikkelit shilajitin todennetuista terveysvaikutuksista löytyy tästä:<br>
-    <a href="https://www.sciencedirect.com/topics/pharmacology-toxicology-and-pharmaceutical-science/shilajeet">Tieteteellinen tutkimus</a>
+   <p id="darkblue"> Artikkelit shilajitin todennetuista terveysvaikutuksista löytyy tästä:<br></p>
+   <ul>
+    <li><a href="https://www.sciencedirect.com/topics/pharmacology-toxicology-and-pharmaceutical-science/shilajeet">Tieteteellinen tutkimus</a></li>
     <br>
-    <a href="https://pharmeasy.in/blog/health-benefits-of-shilajit/">Terveysvaikutukset-blogi</a></p>
-    
+   <li><a href="https://pharmeasy.in/blog/health-benefits-of-shilajit/">Terveysvaikutukset-blogi</a></li>
+   </ul>
 </body>
 </html>
