--- a/index-en.html
+++ b/index-en.html
@@ -44,7 +44,7 @@
 </main>
 
 <aside>
-<h2>Our Burst</h2>
+<h2>Our BURST</h2>
 <p><span class="day">High quality and natural raw materials</span><br>
 <h4>No extra ingredients - in our burst drinks we use pure ingredients like stevia sweetener</p></h4>
 <p><span class="day">No unnecessary additives</span><br><h4>We only use real ingredients and our products do not contain artificial ingredients such as dyes.</h4></p>
