--- a/index-fi.html
+++ b/index-fi.html
@@ -43,7 +43,7 @@
 </main>
 
 <aside>
-<h2>Shilajit</h2>
+<h2>Meidän BURST</h2>
 <p><span class="day">Laadukkaat ja luontaiset raaka-aineet</span><br>
 <h4>Ei ylimääräisiä ainesosia - meidän burst juomaamme käytämme puhtaita raaka-aineita kuten stevia makeutusaine</p></h4>
 <p><span class="day">Ei turhia lisäaineita</span><br><h4>Käytämme vain oikeita aineisosia ja tuotteessamme ei sisällä keinotekoisia aineesosia kuten väriaineita</h4></p>
