Products-en updated
Updated the Products-section (english)

--- a/Products-en.html
+++ b/Products-en.html
@@ -26,11 +26,11 @@
 <h1>About our product</h1>
 
   <p>The product evolved from an idea to offer a healthier alternative to sports drinks.<br>
-    Shilajis have been known for centuries in northern India and Nepal, among other places,
-    and, for example, the Himalayan<br> Sherpat tribe uses it regularly.<br>
-    Sherpas are known as powerful and long-lived mountaineers.
+    Shilajit has been known and used for centuries in places such as northern India and Nepal,
+    and the Himalayan<br> Sherpat tribe uses it regularly.<br>
+    Sherpas are known for their longevity and strength as a mountaineer tribe.
   <br><strong>BURST</strong> is a combination of this natural treasure and pure Finnish spring water.
-  In addition, the drink contains a healthy dose of<br> flavouring and sweetener.</p>
+  In addition, the drink contains a healthy dose of<br> flavouring and sweeteners.</p>
 
 
 
