Made a phone menu for the seperate branch
Made an menu into this new branch. It will need some work to be able to merge into main.
It stays as a phone menu even on desktop.

--- a/Products-fi.html
+++ b/Products-fi.html
@@ -11,16 +11,20 @@
 </head>
 <body>
 
-    <header>
-        <nav>
-          <ul>
-            <li><a href="index-fi.html">Etusivu</a></li>
-            <li><a href="Products-fi.html">Tuotteet</a></li>
-            <li><a href="News-fi.html">Uutiset</a></li>
-            <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
-            <li><a href="Products-en.html">Sivu englanniksi</a></li>
-          </ul>
-        </nav>  
+  <header>
+    <nav>
+      <ul>
+      <li>
+        <a href="#">Menu</a>
+        <ul class="dropdown">
+          <li><a href="index-fi.html">Etusivu</a></li>
+          <li><a href="Products-fi.html">Tuotteet</a></li>
+          <li><a href="News-fi.html">Uutiset</a></li>
+          <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
+          <li><a href="AboutUs-en.html">Sivu englanniksi</a></li>
+      </ul>
+      </li>
+    </nav>  
     </header>
 
 <h1>Tuotteestamme</h1>
