--- a/index-fi.html
+++ b/index-fi.html
@@ -15,21 +15,23 @@
 <div id="container">
 
 
-<header>
-<nav>
-  <ul>
-    <li><a href="index-fi.html">Etusivu</a></li>
-    <li><a href="Products-fi.html">Tuotteet</a></li>
-    <li><a href="News-fi.html">Uutiset</a></li>
-    <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
-    <!-- <li><a class="kielinappi" onclick="kieliVaihto()">Sivu englanniksi</a></li> -->
-    <li><a href="index-en.html">Sivu englanniksi</a></li>
-    <script src="logiikka.js"></script>
-  </ul>
-</nav>  
-  <h1><img src="" alt=""></h1>
-  <p>Placeholder1/Ph1</p>
-</header>
+  <header>
+    <nav>
+      <ul>
+      <li>
+        <a href="#">Menu</a>
+        <ul class="dropdown">
+          <li><a href="index-fi.html">Etusivu</a></li>
+          <li><a href="Products-fi.html">Tuotteet</a></li>
+          <li><a href="News-fi.html">Uutiset</a></li>
+          <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
+              <!-- <li><a class="kielinappi" onclick="kieliVaihto()">Sivu englanniksi</a></li> -->
+           <li><a href="index-en.html">Sivu englanniksi</a></li>
+          <script src="logiikka.js"></script>
+      </ul>
+      </li>
+    </nav>  
+    </header>
 
 <main>
 <h2>Ph2</h2>
