--- a/AboutUs-en.html
+++ b/AboutUs-en.html
@@ -11,16 +11,20 @@
 </head>
 <body>
 
-    <header>
-        <nav>
-          <ul>
-            <li><a href="index-en.html">Frontpage</a></li>
-            <li><a href="Products-en.html">Products</a></li>
-            <li><a href="News-en.html">News</a></li>
-            <li><a href="AboutUs-en.html">About us</a></li>
-            <li><a href="AboutUs-fi.html">In Finnish</a></li>
-          </ul>
-        </nav>  
+  <header>
+    <nav>
+      <ul>
+      <li>
+        <a href="#">Menu</a>
+        <ul class="dropdown">
+          <li><a href="index-en.html">Frontpage</a></li>
+          <li><a href="Products-en.html">Products</a></li>
+          <li><a href="News-en.html">News</a></li>
+          <li><a href="AboutUs-en.html">About us</a></li>
+          <li><a href="AboutUs-fi.html">In Finnish</a></li>
+      </ul>
+      </li>
+    </nav>  
     </header>
 
     <h1>About us</h1>
