--- a/index-en.html
+++ b/index-en.html
@@ -16,21 +16,23 @@
 <div id="container">
 
 
-<header>
-<nav>
-  <ul>
-    <li><a href="index-en.html">Frontpage</a></li>
-    <li><a href="Products-en.html">Products</a></li>
-    <li><a href="News-en.html">News</a></li>
-    <li><a href="AboutUs-en.html">About us</a></li>
-    <!-- <li><a class="kielinappi" onclick="kieliVaihto()">In Finnish</a></li> -->
-    <li><a href="index-fi.html">In Finnish</a></li>
-    <script src="logiikka.js"></script>
-  </ul>
-</nav>  
-  <h1><img src="" alt=""></h1>
-  <p>Placeholder1/Ph1</p>
-</header>
+  <header>
+    <nav>
+      <ul>
+      <li>
+        <a href="#">Menu</a>
+        <ul class="dropdown">
+          <li><a href="index-en.html">Frontpage</a></li>
+          <li><a href="Products-en.html">Products</a></li>
+          <li><a href="News-en.html">News</a></li>
+          <li><a href="AboutUs-en.html">About us</a></li>
+              <!-- <li><a class="kielinappi" onclick="kieliVaihto()">In Finnish</a></li> -->
+          <li><a href="index-fi.html">In Finnish</a></li>
+           <script src="logiikka.js"></script>
+      </ul>
+      </li>
+    </nav>  
+    </header>
 
 <main>
 <h2>Ph2</h2>
