Added logo to top left corner.

--- a/AboutUs-en.html
+++ b/AboutUs-en.html
@@ -23,6 +23,11 @@
         </nav>  
     </header>
 
+    <a href="index-en.html">
+      <img src="burst.svg" alt="Logo" class="logo">
+    </a>
+    
+
     <h1>About us</h1>
 
 
