--- a/News-en.html
+++ b/News-en.html
@@ -23,6 +23,10 @@
         </nav>  
     </header>
 
+    <a href="index-en.html">
+      <img src="burst.svg" alt="Logo" class="logo">
+    </a>
+
     <h1>Articles</h1>
 
     <p id="darkblue"> You can find articles about the confirmed effects shilajit has on health here:<br></p>
