--- a/News-fi.html
+++ b/News-fi.html
@@ -23,6 +23,10 @@
         </nav>  
     </header>
 
+    <a href="index-fi.html">
+      <img src="burst.svg" alt="Logo" class="logo">
+    </a>
+
     <h1>Artikkelit</h1>
 
    <p id="darkblue"> Artikkelit shilajitin todennetuista terveysvaikutuksista löytyy tästä:<br></p>
