--- a/Products-en.html
+++ b/Products-en.html
@@ -23,6 +23,10 @@
         </nav>  
     </header>
 
+    <a href="index-en.html">
+      <img src="burst.svg" alt="Logo" class="logo">
+    </a>
+
 <h1>About our product</h1>
 
   <p>The product evolved from an idea to offer a healthier alternative to sports drinks.<br>
