--- a/Products-fi.html
+++ b/Products-fi.html
@@ -23,6 +23,10 @@
         </nav>  
     </header>
 
+    <a href="index-fi.html">
+      <img src="burst.svg" alt="Logo" class="logo">
+    </a>
+
 <h1>Tuotteestamme</h1>
 
     <p>Tuotteeme kehittyi ideasta tarjota terveellisempi vaihtoehto urheilujuomille.<br>
