--- a/index-fi.html
+++ b/index-fi.html
@@ -31,6 +31,10 @@
   <p>Placeholder1/Ph1</p>
 </header>
 
+<a href="index-fi.html">
+  <img src="burst.svg" alt="Logo" class="logo">
+</a>
+
 <main>
 <h2>Ph2</h2>
 <h3>Ph3</h3>
