--- a/AboutUs-fi.html
+++ b/AboutUs-fi.html
@@ -23,6 +23,10 @@
         </nav>  
     </header>
 
+    <a href="index-fi.html">
+      <img src="burst.svg" alt="Logo" class="logo">
+    </a>
+
     <h1>Tietoa meistä</h1>
 
 
