--- a/index-en.html
+++ b/index-en.html
@@ -19,6 +19,7 @@
 <header>
 <nav>
   <ul>
+    <img src="burst.svg" class="logo">
     <li><a href="index-en.html">Frontpage</a></li>
     <li><a href="Products-en.html">Products</a></li>
     <li><a href="News-en.html">News</a></li>
@@ -31,6 +32,10 @@
   <h1><img src="" alt=""></h1>
   <p>Placeholder1/Ph1</p>
 </header>
+
+<a href="index-en.html"></a>
+    <img src="burst.svg" alt="Logo" class="logo">
+    </a>
 
 <main>
 <h2>Ph2</h2>
