--- a/index-en.html
+++ b/index-en.html
@@ -11,10 +11,17 @@
   <style>
     @import url(bakery-rwd-finished.css);
   </style>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+  var video = document.querySelector('.animation');
+  video.playbackRate = 0.4;
+});
+</script>
+
 </head>
 <body> 
 <div id="container">
-
 
 <header>
 <nav>
@@ -30,9 +37,16 @@
   </ul>
 </nav>  
   <h1><img src="" alt=""></h1>
-  <p>Placeholder1/Ph1</p>
+  <p>Got thirst? Get ready to burst!</p>
 </header>
 
+  <!--Tää on pyörivä pullo-->
+  <video class="animation" autoplay loop muted>
+    <source src="animatedbottle.webm" type="video/webm">
+  </video>
+
+
+<!--Tää on logo-->
 <a href="index-en.html"></a>
     <img src="burst.svg" alt="Logo" class="logo">
     </a>
@@ -59,7 +73,7 @@
 </aside>
 
 <footer>
-<p>Ph11 &copy; Ph12, Ph13</p>
+  <p>Ph11 &copy; Ph12, Ph13</p>
   <div id=""> 
     <img src="" alt=""> 
   </div> 
