--- a/index-en.html
+++ b/index-en.html
@@ -24,7 +24,8 @@
 <div id="container">
 
 <header>
-<nav>
+  <!-- tätä tagia kutsutaan css filessä -->
+<nav class="navigointi">
   <ul>
     <img src="burst.svg" class="logo">
     <li><a href="index-en.html">Frontpage</a></li>
