--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -11,6 +11,19 @@
 </head>
 
 <body>
+
+    <header>
+        <nav>
+          <ul>
+            <li><a href="index-en.html">Frontpage</a></li>
+            <li><a href="Products-en.html">Products</a></li>
+            <li><a href="News-en.html">News</a></li>
+            <li><a href="AboutUs-en.html">About us</a></li>
+            <li><a href="News-fi.html">In Finnish</a></li>
+          </ul>
+        </nav>  
+    </header>
+    
 <h1>Feedback Form</h1>
 
 <form action="form.php" method="post"></form>
