Feedback-fi changes
Minor language changes

--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -3,6 +3,8 @@
 <head>
 <title>Feedback Form</title>
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style type="text/css">
     ol, ul { 
    list-style-type: none;
@@ -23,8 +25,8 @@
           </ul>
         </nav>  
     </header>
-    
-<h1>Feedback Form</h1>
+
+<h1>Palautteesi on tärkeää meille!</h1>
 
 <form action="form.php" method="post"></form>
 
@@ -32,18 +34,18 @@
 
 <fieldset>
     <ul>
-        <label for="free text">Free text</label><br>
-        <textarea name="instructions" rows="4" cols="60" maxlength="400" id="form-story" placeholder="Type here"></textarea></li>
+        <label for="free text">Vapaa teksti</label><br>
+        <textarea name="instructions" rows="4" cols="60" maxlength="400" id="form-story" placeholder="Kirjoita tähän"></textarea></li>
     </ul>
 </fieldset>
 
 <fieldset>
     <ul>
-        <li><label for="form-email">Email: <input type="email" name="email" id="form-email"></label></li>
+        <li><label for="form-email">Sähköposti: <input type="email" name="email" id="form-email"></label></li>
     </ul>
 </fieldset>
 
-<p><input type="submit" value="Send">
+<p><input type="submit" value="Lähetä">
 <input type="Reset"></p>
 
 </body>
