--- a/Feedback-en.html
+++ b/Feedback-en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "fi">
+<html lang = "en">
 <head>
 <title>Feedback Form</title>
 <meta charset="utf-8">
@@ -26,7 +26,7 @@
         </nav>  
     </header>
 
-<h1>Palautteesi on tärkeää meille!</h1>
+<h1>Your feedback is important to us!</h1>
 
 <form action="form.php" method="post"></form>
 
@@ -34,18 +34,18 @@
 
 <fieldset>
     <ul>
-        <label for="free text">Kerro mielipiteesi:</label><br>
-        <textarea name="instructions" rows="4" cols="60" maxlength="400" id="form-story" placeholder="Kirjoita tähän"></textarea></li>
+        <label for="free text">Let us know about your opinion:</label><br>
+        <textarea name="instructions" rows="4" cols="60" maxlength="400" id="form-story" placeholder="Type here"></textarea></li>
     </ul>
 </fieldset>
 
 <fieldset>
     <ul>
-        <li><label for="form-email">Sähköposti: <input type="email" name="email" id="form-email"></label></li>
+        <li><label for="form-email">Email: <input type="email" name="email" id="form-email"></label></li>
     </ul>
 </fieldset>
 
-<p><input type="submit" value="Lähetä">
+<p><input type="submit" value="Send">
 <input type="Reset"></p>
 
 </body>
