--- a/index-en.html
+++ b/index-en.html
@@ -32,6 +32,7 @@
     <li><a href="Products-en.html">Products</a></li>
     <li><a href="News-en.html">News</a></li>
     <li><a href="AboutUs-en.html">About us</a></li>
+    <li><a href="Feedback-en.html">Feedback</a></li>
     <!-- <li><a class="kielinappi" onclick="kieliVaihto()">In Finnish</a></li> -->
     <li><a href="index-fi.html">In Finnish</a></li>
     <script src="logiikka.js"></script>
