--- a/index-fi.html
+++ b/index-fi.html
@@ -30,6 +30,7 @@
     <li><a href="Products-fi.html">Tuotteet</a></li>
     <li><a href="News-fi.html">Uutiset</a></li>
     <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
+    <li><a href="Feedback-fi.html">Palaute</a></li>
     <!-- <li><a class="kielinappi" onclick="kieliVaihto()">Sivu englanniksi</a></li> -->
     <li><a href="index-en.html">Sivu englanniksi</a></li>
     <script src="logiikka.js"></script>
