--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -17,11 +17,12 @@
     <header>
         <nav>
           <ul>
-            <li><a href="index-en.html">Frontpage</a></li>
-            <li><a href="Products-en.html">Products</a></li>
-            <li><a href="News-en.html">News</a></li>
-            <li><a href="AboutUs-en.html">About us</a></li>
-            <li><a href="News-fi.html">In Finnish</a></li>
+            <li><a href="index-fi.html">Etusivu</a></li>
+            <li><a href="Products-fi.html">Tuotteet</a></li>
+            <li><a href="News-fi.html">Uutiset</a></li>
+            <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
+            <li><a href="Feedback-fi.html">Palaute</a></li>
+            <li><a href="News-en.html">Sivu englanniksi</a></li>
           </ul>
         </nav>  
     </header>
