--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -5,10 +5,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style type="text/css">
-    ol, ul { 
-   list-style-type: none;
-    }
+<style>
+    @import url(bakery-rwd-finished.css);
 </style>
 </head>
 
