Feedback: logo added
Logo added to both Feedback files (fi/en)

--- a/Feedback-en.html
+++ b/Feedback-en.html
@@ -25,6 +25,12 @@
         </nav>  
     </header>
 
+
+<a href="index-fi.html">
+    <img src="burst.svg" alt="Logo" class="logo">
+</a>
+
+
 <h1>Your feedback is important to us!</h1>
 
 <form action="form.php" method="post"></form>
