--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -25,6 +25,11 @@
         </nav>  
     </header>
 
+<a href="index-fi.html">
+    <img src="burst.svg" alt="Logo" class="logo">
+</a>
+
+
 <h1>Palautteesi on tärkeää meille!</h1>
 
 <form action="form.php" method="post"></form>
