--- a/index-en.html
+++ b/index-en.html
@@ -39,7 +39,7 @@
   </ul>
 </nav>  
   <h1><img src="" alt=""></h1>
-  <p>Got thirst? Get ready to burst!</p>
+  <p>Got a thirst? Get ready to burst!</p>
 </header>
 
   <!--Tää on pyörivä pullo-->
