--- a/AboutUs-en.html
+++ b/AboutUs-en.html
@@ -37,7 +37,9 @@
 
 
     
-    <p>Follow us in social media!</p>
+    <p>Follow us on social media!</p>
+
+    <img src="group.jpg" alt="group" width="500" height="400">
     
 </body>
 </html>
