--- a/AboutUs-fi.html
+++ b/AboutUs-fi.html
@@ -37,6 +37,8 @@
 
     
     <p>Seuraa meitä somessa!</p>
+
+    <img src="group.jpg" alt="group" width="500" height="400">
     
 </body>
 </html>
