Class "text" added
Added new class in order to change the text style of the files

--- a/AboutUs-fi.html
+++ b/AboutUs-fi.html
@@ -28,6 +28,7 @@
       <img src="burst.svg" alt="Logo" class="logo">
     </a>
 
+    <div class="text">
     <h1>Tietoa meistä</h1>
 
 
@@ -37,6 +38,7 @@
 
     
     <p>Seuraa meitä somessa!</p>
+    </div>
 
     <img src="group.jpg" alt="group" width="500" height="400">
     
