--- a/Feedback-en.html
+++ b/Feedback-en.html
@@ -31,6 +31,7 @@
 </a>
 
 
+<div class="text">
 <h1>Your feedback is important to us!</h1>
 
 <form action="form.php" method="post"></form>
@@ -52,6 +53,7 @@
 
 <p><input type="submit" value="Send">
 <input type="Reset"></p>
+</div>
 
 </body>
 </html>
