--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -30,6 +30,7 @@
 </a>
 
 
+<div class="text">
 <h1>Palautteesi on tärkeää meille!</h1>
 
 <form action="form.php" method="post"></form>
@@ -51,6 +52,7 @@
 
 <p><input type="submit" value="Lähetä">
 <input type="Reset"></p>
+</div>
 
 </body>
 </html>
