--- a/Products-en.html
+++ b/Products-en.html
@@ -28,6 +28,7 @@
       <img src="burst.svg" alt="Logo" class="logo">
     </a>
 
+<div class="text">
 <h1>About our product</h1>
 
   <p>The product evolved from an idea to offer a healthier alternative to sports drinks.<br>
@@ -45,7 +46,7 @@
         <li>Acts as an antioxidant in the body and improves immunity</li>
         <li>A natural energy and resilience booster</li>
     </ul>
-
+</div>
 
 </body>
 </html>
