--- a/Products-fi.html
+++ b/Products-fi.html
@@ -28,6 +28,7 @@
       <img src="burst.svg" alt="Logo" class="logo">
     </a>
 
+<div class="text">
 <h1>Tuotteestamme</h1>
 
     <p>Tuotteeme kehittyi ideasta tarjota terveellisempi vaihtoehto urheilujuomille.<br>
@@ -45,7 +46,7 @@
         <li>Toimii antioksidanttina kehossa ja parantaa vastustuskykyä</li>
         <li>Luonollinen energiatason ja kestävyyden nostaja</li>
     </ul>
-
+</div>
 
 </body>
 </html>
