--- a/News-en.html
+++ b/News-en.html
@@ -28,6 +28,7 @@
       <img src="burst.svg" alt="Logo" class="logo">
     </a>
 
+    <div class="text">
     <h1>Articles</h1>
 
     <p id="darkblue"> You can find articles about the confirmed effects shilajit has on health here:<br></p>
@@ -36,5 +37,7 @@
       <br>
       <li><a href="https://pharmeasy.in/blog/health-benefits-of-shilajit/">Health benefits-blog</a></li>
     </ul>
+    </div>
+    
 </body>
 </html>
