--- a/News-fi.html
+++ b/News-fi.html
@@ -28,6 +28,7 @@
       <img src="burst.svg" alt="Logo" class="logo">
     </a>
 
+    <div class="text">
     <h1>Artikkelit</h1>
 
    <p id="darkblue"> Artikkelit shilajitin todennetuista terveysvaikutuksista löytyy tästä:<br></p>
@@ -36,5 +37,7 @@
     <br>
    <li><a href="https://pharmeasy.in/blog/health-benefits-of-shilajit/">Terveysvaikutukset-blogi</a></li>
    </ul>
+    </div>
+    
 </body>
 </html>
