Minor change on Feedback
Minor text changes on the Feedback files (fi/en)

--- a/Feedback-en.html
+++ b/Feedback-en.html
@@ -52,7 +52,7 @@
 </fieldset>
 
 <p><input type="submit" value="Send">
-<input type="Reset"></p>
+<input type="Reset" value="Reset"></p>
 </div>
 
 </body>
