--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -51,7 +51,7 @@
 </fieldset>
 
 <p><input type="submit" value="Lähetä">
-<input type="Reset"></p>
+<input type="Reset" value="Tyhjennä"></p>
 </div>
 
 </body>
