Added alt text to images

--- a/Products-fi.html
+++ b/Products-fi.html
@@ -25,7 +25,7 @@
     </header>
 
     <a href="index-fi.html">
-      <img src="burst.svg" alt="Logo" class="logo">
+      <img src="burst.svg" alt="Burst logo, edessä burst teksti ja taustalla vuori" class="logo">
     </a>
 
 <div class="text">
@@ -49,4 +49,4 @@
 </div>
 
 </body>
-</html>
+</html>4
