Added alt text to images

--- a/AboutUs-fi.html
+++ b/AboutUs-fi.html
@@ -40,7 +40,7 @@
     <p>Seuraa meitä somessa!</p>
     </div>
 
-    <img src="group.jpg" alt="group" width="500" height="400">
+    <img src="group.jpg" alt="group" width="500" height="400" alt="Ryhmä ihmisiä seisomassa yhdessä">
     
 </body>
 </html>
