--- a/Feedback-en.html
+++ b/Feedback-en.html
@@ -27,7 +27,7 @@
 
 
 <a href="index-fi.html">
-    <img src="burst.svg" alt="Logo" class="logo">
+    <img src="burst.svg" alt="Logo" class="logo" alt="Burst logo with mountain on the back and word burst in front">
 </a>
 
 
