--- a/News-en.html
+++ b/News-en.html
@@ -25,7 +25,7 @@
     </header>
 
     <a href="index-en.html">
-      <img src="burst.svg" alt="Logo" class="logo">
+      <img src="burst.svg" alt="Burst logo with mountain on the back and word burst in front" class="logo">
     </a>
 
     <div class="text">
