--- a/index-en.html
+++ b/index-en.html
@@ -27,7 +27,7 @@
   <!-- tätä tagia kutsutaan css filessä -->
 <nav class="navigointi">
   <ul>
-    <img src="burst.svg" class="logo">
+    <img src="burst.svg" class="logo" alt="Burst logo with mountain on the back and word burst in front">
     <li><a href="index-en.html">Frontpage</a></li>
     <li><a href="Products-en.html">Products</a></li>
     <li><a href="News-en.html">News</a></li>
@@ -38,7 +38,7 @@
     <script src="logiikka.js"></script>
   </ul>
 </nav>  
-  <h1><img src="" alt=""></h1>
+  <h1><img src="" alt="Empty"></h1>
   <p>Got a thirst? Get ready to burst!</p>
 </header>
 
@@ -50,17 +50,17 @@
 
 <!--Tää on logo-->
 <a href="index-en.html"></a>
-    <img src="burst.svg" alt="Logo" class="logo">
+    <img src="burst.svg" alt="Logo" class="logo" alt="Burst logo with mountain on the back and word burst in front">
     </a>
 
 <main>
 <h2>Ph2</h2>
 <h3>Ph3</h3>
-<p><img src="" alt=""> Ph4<span class="linelength"> Ph5 </span>Ph6</p>
+<p><img src="" alt="Empty"> Ph4<span class="linelength"> Ph5 </span>Ph6</p>
 <p class="more"><a href="">Ph.Bababooey</a></p>
 
 <h3>Ph7</h3>
-<p><img src="" alt=""> Ph8</p>
+<p><img src="" alt="Empty"> Ph8</p>
 <p class="more"><a href="">Ph9</a></p>
 </main>
 
@@ -77,7 +77,7 @@
 <footer>
   <p>Ph11 &copy; Ph12, Ph13</p>
   <div id=""> 
-    <img src="" alt=""> 
+    <img src="" alt="Empty"> 
   </div> 
 </footer>
 </div>
