--- a/AboutUs-en.html
+++ b/AboutUs-en.html
@@ -40,7 +40,7 @@
     <p>Follow us on social media!</p>
     </div>
 
-    <img src="group.jpg" alt="group" width="500" height="400">
+    <img src="group.jpg" alt="group" width="500" height="400" alt="A group of people standing together">
     
 </body>
 </html>
