--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -26,7 +26,7 @@
     </header>
 
 <a href="index-fi.html">
-    <img src="burst.svg" alt="Logo" class="logo">
+    <img src="burst.svg" alt="Logo" class="logo" alt="Burst logo, edessä burst teksti ja taustalla vuori">
 </a>
 
 
