--- a/index-fi.html
+++ b/index-fi.html
@@ -36,7 +36,7 @@
     <script src="logiikka.js"></script>
   </ul>
 </nav>  
-  <h1><img src="" alt=""></h1>
+  <h1><img src="" alt="Tyhjä"></h1>
   <p>Janottaako? Ota Burst!</p>
 </header>
 
@@ -47,17 +47,17 @@
 
 <!--Tää on logo-->
 <a href="index-fi.html">
-  <img src="burst.svg" alt="Logo" class="logo">
+  <img src="burst.svg" alt="Logo" class="logo" alt="Burst logo, edessä burst teksti ja taustalla vuori">
 </a>
 
 <main>
 <h2>Ph2</h2>
 <h3>Ph3</h3>
-<p><img src="" alt=""> Ph4<span class="linelength"> Ph5 </span>Ph6</p>
+<p><img src="" alt="Tyhjä"> Ph4<span class="linelength"> Ph5 </span>Ph6</p>
 <p class="more"><a href="">Ph.Bababooey</a></p>
 
 <h3>Ph7</h3>
-<p><img src="" alt=""> Ph8</p>
+<p><img src="" alt="Tyhjä"> Ph8</p>
 <p class="more"><a href="">Ph9</a></p>
 </main>
 
@@ -74,7 +74,7 @@
 <footer>
   <p>Ph11 &copy; Ph12, Ph13</p>
   <div id=""> 
-    <img src="" alt=""> 
+    <img src="" alt="Tyhjä"> 
   </div> 
 </footer>
 </div>
