--- a/AboutUs-en.html
+++ b/AboutUs-en.html
@@ -14,6 +14,9 @@
     <header>
         <nav>
           <ul>
+            <li>
+              <a href="#" class="Menu">Menu</a>
+              <ul class="dropdown">
             <li><a href="index-en.html">Frontpage</a></li>
             <li><a href="Products-en.html">Products</a></li>
             <li><a href="News-en.html">News</a></li>
@@ -40,7 +43,7 @@
     <p>Follow us on social media!</p>
     </div>
 
-    <img src="group.jpg" alt="group" width="500" height="400" alt="A group of people standing together">
+    <img src="group.jpg" class="Ryhmäkuva" width="500" height="400" alt="A group of people standing together">
     
 </body>
 </html>
