--- a/index-fi.html
+++ b/index-fi.html
@@ -26,18 +26,19 @@
 <header>
 <nav>
   <ul>
+    <li>
+      <a href="#" class="Menu">Menu</a>
+      <ul class="dropdown">
     <li><a href="index-fi.html">Etusivu</a></li>
     <li><a href="Products-fi.html">Tuotteet</a></li>
     <li><a href="News-fi.html">Uutiset</a></li>
     <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
     <li><a href="Feedback-fi.html">Palaute</a></li>
-    <!-- <li><a class="kielinappi" onclick="kieliVaihto()">Sivu englanniksi</a></li> -->
     <li><a href="index-en.html">Sivu englanniksi</a></li>
     <script src="logiikka.js"></script>
   </ul>
 </nav>  
-  <h1><img src="" alt="Tyhjä"></h1>
-  <p>Janottaako? Ota Burst!</p>
+  <h1>Janottaako? Ota BURST!</h1>
 </header>
 
  <!--Tää on pyörivä pullo-->
@@ -53,12 +54,12 @@
 <main>
 <h2>Ph2</h2>
 <h3>Ph3</h3>
-<p><img src="" alt="Tyhjä"> Ph4<span class="linelength"> Ph5 </span>Ph6</p>
-<p class="more"><a href="">Ph.Bababooey</a></p>
+<p>Ph4</p>
+<p class="more">Ph.Bababooey</a></p>
 
 <h3>Ph7</h3>
-<p><img src="" alt="Tyhjä"> Ph8</p>
-<p class="more"><a href="">Ph9</a></p>
+<p>Ph8</p>
+<p class="more">Ph9</a></p>
 </main>
 
 <aside>
@@ -72,9 +73,7 @@
 </aside>
 
 <footer>
-  <p>Ph11 &copy; Ph12, Ph13</p>
-  <div id=""> 
-    <img src="" alt="Tyhjä"> 
+  <p>Meikäläisenkatu 13 BURST OY</p>
   </div> 
 </footer>
 </div>
