--- a/Feedback-en.html
+++ b/Feedback-en.html
@@ -15,12 +15,15 @@
     <header>
         <nav>
           <ul>
+            <li>
+                <a href="#" class="Menu">Menu</a>
+                <ul class="dropdown">
             <li><a href="index-en.html">Frontpage</a></li>
             <li><a href="Products-en.html">Products</a></li>
             <li><a href="News-en.html">News</a></li>
             <li><a href="AboutUs-en.html">About us</a></li>
             <li><a href="Feedback-en.html">Feedback</a></li>
-            <li><a href="News-fi.html">In Finnish</a></li>
+            <li><a href="Feedback-fi.html">In Finnish</a></li>
           </ul>
         </nav>  
     </header>
