--- a/Feedback-fi.html
+++ b/Feedback-fi.html
@@ -15,12 +15,15 @@
     <header>
         <nav>
           <ul>
+            <li>
+                <a href="#" class="Menu">Menu</a>
+                <ul class="dropdown">
             <li><a href="index-fi.html">Etusivu</a></li>
             <li><a href="Products-fi.html">Tuotteet</a></li>
             <li><a href="News-fi.html">Uutiset</a></li>
             <li><a href="AboutUs-fi.html">Lisää Meistä!</a></li>
             <li><a href="Feedback-fi.html">Palaute</a></li>
-            <li><a href="News-en.html">Sivu englanniksi</a></li>
+            <li><a href="Feedback-en.html">Sivu englanniksi</a></li>
           </ul>
         </nav>  
     </header>
