--- a/Products-en.html
+++ b/Products-en.html
@@ -14,6 +14,9 @@
     <header>
         <nav>
           <ul>
+            <li>
+              <a href="#" class="Menu">Menu</a>
+              <ul class="dropdown">
             <li><a href="index-en.html">Frontpage</a></li>
             <li><a href="Products-en.html">Products</a></li>
             <li><a href="News-en.html">News</a></li>
