--- a/index-en.html
+++ b/index-en.html
@@ -28,18 +28,19 @@
 <nav class="navigointi">
   <ul>
     <img src="burst.svg" class="logo" alt="Burst logo with mountain on the back and word burst in front">
+    <li>
+      <a href="#" class="Menu">Menu</a>
+      <ul class="dropdown">
     <li><a href="index-en.html">Frontpage</a></li>
     <li><a href="Products-en.html">Products</a></li>
     <li><a href="News-en.html">News</a></li>
     <li><a href="AboutUs-en.html">About us</a></li>
     <li><a href="Feedback-en.html">Feedback</a></li>
-    <!-- <li><a class="kielinappi" onclick="kieliVaihto()">In Finnish</a></li> -->
     <li><a href="index-fi.html">In Finnish</a></li>
     <script src="logiikka.js"></script>
   </ul>
 </nav>  
-  <h1><img src="" alt="Empty"></h1>
-  <p>Got a thirst? Get ready to burst!</p>
+  <h1>Got a thirst? Get ready to BURST!</h1>
 </header>
 
   <!--Tää on pyörivä pullo-->
@@ -56,12 +57,12 @@
 <main>
 <h2>Ph2</h2>
 <h3>Ph3</h3>
-<p><img src="" alt="Empty"> Ph4<span class="linelength"> Ph5 </span>Ph6</p>
-<p class="more"><a href="">Ph.Bababooey</a></p>
+<p>Ph4</p>
+<p class="more">Ph.Bababooey</a></p>
 
 <h3>Ph7</h3>
-<p><img src="" alt="Empty"> Ph8</p>
-<p class="more"><a href="">Ph9</a></p>
+<p>Ph8</p>
+<p class="more">Ph9</a></p>
 </main>
 
 <aside>
@@ -75,9 +76,7 @@
 </aside>
 
 <footer>
-  <p>Ph11 &copy; Ph12, Ph13</p>
-  <div id=""> 
-    <img src="" alt="Empty"> 
+  <p>Meikäläisenkatu 13 BURST OY</p>
   </div> 
 </footer>
 </div>
