--- a/index-en.html
+++ b/index-en.html
@@ -69,9 +69,9 @@
 <h2>Our Burst</h2>
 <p><span class="day">High quality and natural raw materials</span><br>
 <h4>No extra ingredients - we use natural ingredients and sweeteners in our Burst drinks such as stevia</p></h4>
-<p><span class="day">No unnecessary additives</span><br><h4>We only use pure ingredients, our products do not contain artificial ingredients such as synthetic food colouring.</h4></p>
-<p><span class="day">Natural sweeteners</span><br><h4>Our product does not contain acesulfame K, aspartame or sucralose.</h4></p>
-<p><span class="day">Delicious taste</span><br><h4>We put our Burst drinks close to nature's beloved and authentic taste experiences, so you can enjoy our shilajit drinks freely without any aftertaste.</h4></p>
+<p><span class="day">No unnecessary additives</span><br><h4>We only use pure ingredients, our products do not contain artificial ingredients such as synthetic food colouring</h4></p>
+<p><span class="day">Natural sweeteners</span><br><h4>Our product does not contain acesulfame K, aspartame or sucralose</h4></p>
+<p><span class="day">Delicious taste</span><br><h4>We put our Burst drinks close to nature's beloved and authentic taste experiences, so you can enjoy our shilajit drinks freely without any aftertaste</h4></p>
 <p><span class="day">Shilajit Impacts & Usability</span><br><h4>Do you feel tired and fatiqued? Long days wearing you down? Whatever your day or mood may be, Burst will give your everyday life an energy boost and make you feel stronger. LETS GO!</h4></p>
 </aside>
 
