--- a/index-fi.html
+++ b/index-fi.html
@@ -69,7 +69,7 @@
 <p><span class="day">Ei turhia lisäaineita</span><br><h4>Tuotteemme ei sisällä keinotekoisia ainesosia kuten väriaineita</h4></p>
 <p><span class="day">Luontainen makeutus</span><br><h4>Käytämme stevia ja muita luonnon makeutusainesosia. Tuotteessamme ei sisälly asesulfaami K:ta eikä aspartaamia tai sukraloosia</h4></p>
 <p><span class="day">Herkullinen maku</span><br><h4>Panostamme Burst -juomaamme lähellä luonnon rakkaisiin ja aitoihin makuelämyksiin, jotta voit nauttia meidän shilajit-juomista vapaasti ilman ylimääräisiä jälkimakuja</h4></p>
-<p><span class="day">Shilajit vaikutukset & Käytettävyys</span><br><h4>Oletko väsynyt? Onko pitkiä päiviä? Oli päiväsi tai olosi mikä tahansa, Burst -tuotteemme tuo jokapäiväiseen arkeen boostia ja vahvistaa sinua entistä enemmän. Get ready to BURST!</h4></p>
+<p><span class="day">Shilajit vaikutukset & Käytettävyys</span><br><h4>Oletko väsynyt? Onko pitkiä päiviä? Oli päiväsi tai olosi mikä tahansa, Burst -tuotteemme tuo jokapäiväiseen arkeen boostia ja vahvistaa sinua entistä enemmän. Ota BURST!</h4></p>
 </aside>
 
 <footer>
