--- a/index-en.html
+++ b/index-en.html
@@ -4,6 +4,7 @@
   <!-- <script src="logiikka.js"></script> -->
   <meta charset="UTF-8">
   <title>BURST | GOT A THIRST? GET READY TO BURST!</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Discover the health benefits of Burst, a drink made with the powerful ingredient Shilajit and available in a variety of delicious flavors. Enjoy the best of both worlds with Burst's unique combination of taste and wellness.">
