Class added to Aboutus-fi

--- a/AboutUs-fi.html
+++ b/AboutUs-fi.html
@@ -44,7 +44,7 @@
     <p>Seuraa meitä somessa!</p>
     </div>
 
-    <img src="group.jpg" alt="group" width="500" height="400" alt="Ryhmä ihmisiä seisomassa yhdessä">
+    <img src="group.jpg" class="Ryhmäkuva" width="500" height="400" alt="Ryhmä ihmisiä seisomassa yhdessä">
     
 </body>
 </html>
