Changes to footer (index)

--- a/index-en.html
+++ b/index-en.html
@@ -65,7 +65,9 @@
 </aside>
 
 <footer>
-  <p>Meikäläisenkatu 13 BURST OY</p>
+  <p>BURST OY</p>
+  <p>Meikälaisenkatu 13, 20360 TURKU</p>
+  <p>Email: support@burst.fi</p>
   </div> 
 </footer>
 </div>
