--- a/index-fi.html
+++ b/index-fi.html
@@ -63,7 +63,9 @@
 </aside>
 
 <footer>
-  <p>Meikäläisenkatu 13 BURST OY</p>
+  <p>BURST OY</p>
+  <p>Meikälaisenkatu 13, 20360 TURKU</p>
+  <p>Sähköposti: support@burst.fi</p>
   </div> 
 </footer>
 </div>
