Sivu näyttää hyvälle mobiilissa
jeejee

--- a/AboutUs-en.html
+++ b/AboutUs-en.html
@@ -28,12 +28,12 @@
         </nav>  
     </header>
 
-    <a href="index-en.html">
+
       <img src="burst.svg" alt="Logo" class="logo">
-    </a>
+
     
     <div class="text">
-    <h1>About us</h1>
+    <h1 class="Mobiiliotsikko">About us</h1>
 
 
     <p>We are a group of young and enthusiastic product developers who believe in <br>innovative
@@ -44,7 +44,7 @@
     <p>Follow us on social media!</p>
     </div>
 
-    <img src="group.jpg" class="Ryhmäkuva" width="500" height="400" alt="A group of people standing together">
+    <img src="group.jpg" class="Ryhmäkuva" width="375px" height="auto" alt="A group of people standing together">
     
 </body>
 </html>
