--- a/AboutUs-fi.html
+++ b/AboutUs-fi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meistä</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -33,7 +33,7 @@
     </a>
 
     <div class="text">
-    <h1>Tietoa meistä</h1>
+    <h1 class="Mobiiliotsikko">Tietoa meistä</h1>
 
 
     <p>Olemme joukko nuoria ja innokkaita tuotteiden kehittäjiä, jotka uskovat <br>innovatiivisiin
@@ -44,7 +44,7 @@
     <p>Seuraa meitä somessa!</p>
     </div>
 
-    <img src="group.jpg" class="Ryhmäkuva" width="500" height="400" alt="Ryhmä ihmisiä seisomassa yhdessä">
+    <img src="group.jpg" class="Ryhmäkuva" width="375px" height="auto" alt="Ryhmä ihmisiä seisomassa yhdessä">
     
 </body>
 </html>
