--- a/News-en.html
+++ b/News-en.html
@@ -33,7 +33,7 @@
     </a>
 
     <div class="text">
-    <h1>Articles</h1>
+    <h1 class="Mobiiliotsikko">Articles</h1>
 
     <p id="darkblue"> You can find articles about the confirmed effects shilajit has on health here:<br></p>
     <ul>
