--- a/News-fi.html
+++ b/News-fi.html
@@ -33,7 +33,7 @@
     </a>
 
     <div class="text">
-    <h1>Artikkelit</h1>
+    <h1 class="Mobiiliotsikko">Artikkelit</h1>
 
    <p id="darkblue"> Artikkelit shilajitin todennetuista terveysvaikutuksista löytyy tästä:<br></p>
    <ul>
