--- a/Products-en.html
+++ b/Products-en.html
@@ -33,7 +33,7 @@
     </a>
 
 <div class="text">
-<h1>About our product</h1>
+<h1 class="Mobiiliotsikko">About our product</h1>
 
   <p>The product evolved from an idea to offer a healthier alternative to sports drinks.<br>
     Shilajit has been known and used for centuries in places such as northern India and Nepal,
