--- a/Products-fi.html
+++ b/Products-fi.html
@@ -33,7 +33,7 @@
     </a>
 
 <div class="text">
-<h1>Tuotteestamme</h1>
+<h1 class="Mobiiliotsikko">Tuotteestamme</h1>
 
     <p>Tuotteeme kehittyi ideasta tarjota terveellisempi vaihtoehto urheilujuomille.<br>
     Shilajit on ollu tunnettu jo vuosisatojen ajan muun muuassa Pohjois-Intiassa ja Nepalissa,
