--- a/Feedback-en.html
+++ b/Feedback-en.html
@@ -17,8 +17,9 @@
         <nav>
           <ul>
             <li>
-                <a href="#" class="Menu">Menu</a>
+                <a button onclick="myFunction()" class="Menu">Menu</a></button>
                 <ul class="dropdown">
+              <div id="myDiv">
             <li><a href="index-en.html">Frontpage</a></li>
             <li><a href="Products-en.html">Products</a></li>
             <li><a href="News-en.html">News</a></li>
@@ -28,6 +29,17 @@
           </ul>
         </nav>  
     </header>
+
+    <script>
+        function myFunction() {
+          var x = document.getElementById("myDiv");
+          if (x.style.display === "none") {
+            x.style.display = "block";
+          } else {
+            x.style.display = "none";
+          }
+        }
+        </script>
 
 
 <a href="index-fi.html">
