--- a/News-en.html
+++ b/News-en.html
@@ -16,8 +16,9 @@
         <nav>
           <ul>
             <li>
-              <a href="#" class="Menu">Menu</a>
+              <a button onclick="myFunction()" class="Menu">Menu</a></button>
               <ul class="dropdown">
+            <div id="myDiv">
             <li><a href="index-en.html">Frontpage</a></li>
             <li><a href="Products-en.html">Products</a></li>
             <li><a href="News-en.html">News</a></li>
@@ -27,6 +28,17 @@
           </ul>
         </nav>  
     </header>
+
+    <script>
+      function myFunction() {
+        var x = document.getElementById("myDiv");
+        if (x.style.display === "none") {
+          x.style.display = "block";
+        } else {
+          x.style.display = "none";
+        }
+      }
+      </script>
 
     <a href="index-en.html">
       <img src="burst.svg" alt="Burst logo with mountain on the back and word burst in front" class="logo">
