--- a/index-en.html
+++ b/index-en.html
@@ -30,8 +30,9 @@
   <ul>
     <img src="burst.svg" class="logo" alt="Burst logo with mountain on the back and word burst in front">
     <li>
-      <a href="#" class="Menu">Menu</a>
+      <a button onclick="myFunction()" class="Menu">Menu</a></button>
       <ul class="dropdown">
+    <div id="myDiv">
     <li><a href="index-en.html">Frontpage</a></li>
     <li><a href="Products-en.html">Products</a></li>
     <li><a href="News-en.html">News</a></li>
@@ -43,6 +44,17 @@
 </nav>  
   <h1>Got a thirst? Get ready to BURST!</h1>
 </header>
+
+<script>
+  function myFunction() {
+    var x = document.getElementById("myDiv");
+    if (x.style.display === "none") {
+      x.style.display = "block";
+    } else {
+      x.style.display = "none";
+    }
+  }
+  </script>
 
   <!--Tää on pyörivä pullo-->
   <video class="animation" autoplay loop muted>
