Ei toimi menu kunnolla
lite problems

--- a/AboutUs-en.html
+++ b/AboutUs-en.html
@@ -16,7 +16,7 @@
         <nav>
           <ul>
             <li>
-              <a button onclick="myFunction()" class="Menu">Menu</a></button>
+              <a href="#" button onclick="myFunction()" class="Menu">Menu</a></button>
               <ul class="dropdown">
             <div id="myDiv">
             <li><a href="index-en.html">Frontpage</a></li>
@@ -30,9 +30,6 @@
         </nav>  
     </header>
 
-<<<<<<< Updated upstream
-
-=======
     <script>
       function myFunction() {
         var x = document.getElementById("myDiv");
@@ -43,10 +40,6 @@
         }
       }
       </script>
-      
- 
-    <a href="index-en.html">
->>>>>>> Stashed changes
       <img src="burst.svg" alt="Logo" class="logo">
 
     
